--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.5.3
+:revnumber: 1.5.4-SNAPSHOT
 :hardbreaks:
 :chapter-label: Chapter
 :version-label: Version
