Publishing Database Rider 1.5.4-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -1368,6 +1368,25 @@ USER:
  - ID: 2
    NAME: "@dbrider"
 ----
+[discrete]
+[discrete]
+[TIP]
+======
+[discrete]
+You can use <<DataSet-export>> to generate `DatasetBuilder` code, for that just set `builderType` property in `@ExportDataSet`, ex:
+[discrete]
+[discrete]
+[source,java]
+----
+   @Test
+   @DataSet("datasets/yml/users.yml")
+   @ExportDataSet(format = DataSetFormat.XML, outputName = "target/exported/xml/AllTables.xml", builderType = BuilderType.DEFAULT)
+   public void shouldExportDataSetAsBuilderInDefaultSyntax() {
+       //AllTables.java file containing DataSetBuilder code will be generated along with AllTables.xml file.
+   }
+----
+[discrete]
+======
 
 
 ******
