--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,14 +10,14 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.7.2-SNAPSHOT
+:revnumber: 1.7.1
 :hardbreaks:
 :chapter-label: Chapter
 :version-label: Version
 
 = *Database Rider Documentation*
 
-include::/home/travis/build/database-rider/database-rider/rider-core/target/test-classes/cukedoctor-intro.adoc[leveloffset=+1]
+include::/home/PROCERGS.REDERS/rafael-pestano/projetos/database-rider/rider-core/target/test-classes/cukedoctor-intro.adoc[leveloffset=+1]
 
 
 [[Seeding-database, Seeding database]]
