--- a/README.adoc
+++ b/README.adoc
@@ -174,7 +174,7 @@ This module is the basis for subsequent modules. It contains a JUnit rule (shown
 <dependency>
       <groupId>com.github.database-rider</groupId>
       <artifactId>rider-core</artifactId>
-      <version>1.7.1</version>
+      <version>1.7.3</version>
       <scope>test</scope>
 </dependency>
 ----
@@ -1210,7 +1210,7 @@ If you use CDI in your tests then you should give a try in Database Rider https:
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cdi</artifactId>
-    <version>1.7.1</version>
+    <version>1.7.3</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1277,7 +1277,7 @@ NOTE: If you don't use CDI you'll need to https://github.com/database-rider/data
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cucumber</artifactId>
-    <version>1.7.1</version>
+    <version>1.7.3</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1482,7 +1482,7 @@ http://junit.org/junit5/[JUnit 5] is the new version of JUnit and comes with a n
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-junit5</artifactId>
-    <version>1.7.1</version>
+    <version>1.7.3</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1540,7 +1540,7 @@ Add Database Rider Spring extension to your project
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-spring</artifactId>
-    <version>1.7.1</version>
+    <version>1.7.3</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1661,7 +1661,7 @@ TIP: Complete source code of example above can be https://github.com/database-ri
 
 == Export DataSets
 
-Manual creation of datasets is a very error prone task. In order to export database state *after test* execution into datasets files or <<DataSet providers, DataSetBuilder>> (since v1.7.1) one can use *@ExportDataSet* Annotation or use DataSetExporter component.
+Manual creation of datasets is a very error prone task. In order to export database state *after test* execution into datasets files or <<DataSet providers, DataSetBuilder>> one can use *@ExportDataSet* Annotation or use DataSetExporter component.
 
 === Example
 
