Publishing Database Rider 1.7.6-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.7.5
+:revnumber: 1.7.6-SNAPSHOT
 :hardbreaks:
 :chapter-label: Chapter
 :version-label: Version
