Publishing Database Rider 1.7.6-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -260,6 +260,7 @@ include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5
 <4> DBUnitExtension will get connection by reflection so just declare a field or a method with `ConnectionHolder` as return type.
 [discrete]
 [discrete]
+[discrete]
 TIP: The same works for SpringBoot projects using JUnit5, see an example https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample[project here^].
 
 
