--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -195,14 +195,13 @@ include::../../../../rider-cdi/src/test/java/com/github/database/rider/cdi/DBUni
 <1> https://deltaspike.apache.org/documentation/test-control.html[CdiTestRunner^] is provided by https://deltaspike.apache.org[Apache Deltaspike^] but you should be able to use other CDI test runners.
 [discrete]
 <2> Needed to activate DBUnit interceptor
-[discrete]
-[discrete]
-IMPORTANT: Since `v1.8.0` you can also use `com.github.database.rider.cdi.api.DBRider` annotation to enable database rider, both activate the DBUnitInterceptor.
 
 
 ******
 
 TIP: Source code of the above example can be https://github.com/database-rider/database-rider/blob/master/rider-cdi/src/test/java/com/github/database/rider/cdi/DBUnitCDIIt.java#L74[found here^].
+
+IMPORTANT: Since `v1.8.0` you can also use `com.github.database.rider.cdi.api.DBRider` annotation to enable database rider, both activate the DBUnitInterceptor.
 
 Then ::
 The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
@@ -258,10 +257,6 @@ include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5
 <3> As JUnit5 requires *Java8* you can use lambdas in your tests;
 [discrete]
 <4> DBUnitExtension will get connection by reflection so just declare a field or a method with `ConnectionHolder` as return type.
-[discrete]
-[discrete]
-[discrete]
-TIP: The same works for SpringBoot projects using JUnit5, see an example https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample[project here^].
 
 
 ******
@@ -281,6 +276,8 @@ include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5
 <1> Shortcut for `@Test` and `@ExtendWith(DBUnitExtension.class)`
 ====
 
+TIP: The same works for SpringBoot projects using JUnit5, see an example https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample[project here^].
+
 Then ::
 The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
 ==========
@@ -299,8 +296,7 @@ include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/
 
 IMPORTANT: As cucumber doesn't work with JUnit Rules, see https://github.com/cucumber/cucumber-jvm/issues/393[this issue^], you won't be able to use Cucumber runner with _DBUnit Rule_, but you can use DataSetExecutor in `@Before`, see https://github.com/database-rider/database-rider/tree/master/rider-examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/withoutcdi[example here^].
 
-[discrete]
-==== *Dependencies*
+====== *Dependencies*
 Here is a set of maven dependencies needed by Database Rider Cucumber:
 
 NOTE: Most of the dependencies, except CDI container implementation, are brought by Database Rider Cucumber module transitively.
@@ -308,24 +304,68 @@ NOTE: Most of the dependencies, except CDI container implementation, are brought
 [source,xml]
 ----
 <dependency>
-   <groupId>com.github.database-rider</groupId>
-   <artifactId>rider-cucumber</artifactId>
+     <groupId>com.github.database-rider</groupId>
+     <artifactId>rider-cucumber</artifactId>
 include::../../../../pom.xml[tags=version]
-   <scope>test</scope>
+     <scope>test</scope>
 </dependency>
 ----
 
 .Cucumber dependencies
-[source,xml,indent=0]
+[source,xml]
 ----
-include::../../../pom.xml[tags=cucumber-deps]
+<dependency> <!--1-->
+  <groupId>info.cukes</groupId>
+  <artifactId>cucumber-junit</artifactId>
+  <version>1.2.4</version>
+  <scope>test</scope>
+</dependency>
+<dependency> <!--1-->
+  <groupId>info.cukes</groupId>
+  <artifactId>cucumber-java</artifactId>
+  <version>1.2.4</version>
+  <scope>test</scope>
+</dependency>
 ----
-<1> You don't need to declare because it comes with Database Rider Cucumber module dependency.
+<1>  You don't need to declare because it comes with Database Rider Cucumber module dependency.
 
 .DeltaSpike and CDI dependency
-[source,xml,indent=0]
+[source,xml]
 ----
-include::../../../../rider-cdi/pom.xml[tags=deltaspike-cdi-deps]
+<dependency> <!--1-->
+  <groupId>org.apache.deltaspike.modules</groupId>
+  <artifactId>deltaspike-test-control-module-api</artifactId>
+  <version>${ds.version}</version>
+  <scope>test</scope>
+</dependency>
+
+<dependency> <!--1-->
+  <groupId>org.apache.deltaspike.core</groupId>
+  <artifactId>deltaspike-core-impl</artifactId>
+  <version>${ds.version}</version>
+  <scope>test</scope>
+</dependency>
+
+<dependency> <!--1-->
+  <groupId>org.apache.deltaspike.modules</groupId>
+  <artifactId>deltaspike-test-control-module-impl</artifactId>
+  <version>${ds.version}</version>
+  <scope>test</scope>
+</dependency>
+
+<dependency> <!--2-->
+  <groupId>org.apache.deltaspike.cdictrl</groupId>
+  <artifactId>deltaspike-cdictrl-owb</artifactId>
+  <version>${ds.version}</version>
+  <scope>test</scope>
+</dependency>
+
+<dependency>  <!--2-->
+  <groupId>org.apache.openwebbeans</groupId>
+  <artifactId>openwebbeans-impl</artifactId>
+  <version>1.6.2</version>
+  <scope>test</scope>
+</dependency>
 ----
 <2> Also comes with Rider Cucumber.
 <3> You can use CDI implementation of your choice.
